fixade text, inget funktionelt

--- a/AngularApp/src/app/statistic/statistic.component.html
+++ b/AngularApp/src/app/statistic/statistic.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
 
-      <button type="button" [disabled]="!Data.form.valid" class="btn btn-default" (click)="getSubmit()">lägg till godkänd app</button>
+      <button type="button" [disabled]="!Data.form.valid" class="btn btn-default" (click)="getSubmit()">se statestik</button>
 
       <br>
       <br>
